bk_ida/gccida/c3/cpp_token_as_text
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1851:38: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
unsigned __int8 * cpp_token_as_text( cpp_reader_0 *pfile, const cpp_token_0 *token) 
                                     ^~~~~~~~~~~~
                                     cpp_reader
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1851:65: error: unknown type name 'cpp_token_0'; did you mean 'cpp_token'?
unsigned __int8 * cpp_token_as_text( cpp_reader_0 *pfile, const cpp_token_0 *token) 
                                                                ^~~~~~~~~~~
                                                                cpp_token
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplib.h:40:26: note: 'cpp_token' declared here
typedef struct cpp_token cpp_token;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1853:1: error: must use 'enum' tag to refer to type 'spell_type'
spell_type category; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1856:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 *u_buff; // rax 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1860:1: error: unknown type name '_cpp_buff_0'; did you mean '_cpp_buff'?
_cpp_buff_0 **p_free_buffs; // rdx 
^~~~~~~~~~~
_cpp_buff
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpphash.h:47:26: note: '_cpp_buff' declared here
typedef struct _cpp_buff _cpp_buff;
                         ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1914:25: error: expected expression
u_buff = ( _cpp_buff_0 *)&cur[v13]; 
                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/cpplex.c:1914:12: error: use of undeclared identifier '_cpp_buff_0'
u_buff = ( _cpp_buff_0 *)&cur[v13]; 
           ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/cpp_token_as_text/src/obj/cpplex.o] Error 1
